fixed share box drop down on mobile view

--- a/public/stylesheets/engage/style.css
+++ b/public/stylesheets/engage/style.css
@@ -119,20 +119,7 @@ body#splash #login_as a{
 
 	margin-top: 5px;
 }
-#404 h1{
-	font-size: 80px;
-}
-#404 div{
-	text-align: center;
-}
 
-
-#404 .button{
-	border-radius: 2px;
-	border-color: #555;
-	background-color: #888;
-
-}
 /* -----------------------------------------
    Header and Navigation
 ----------------------------------------- */
@@ -262,6 +249,7 @@ div#header{
 	box-shadow :0px 1px 5px #9e9e9e;
 	display: none;
 	text-align: center;
+	padding: 10px 0 !important;
 
 	
 }
@@ -307,6 +295,9 @@ div#header{
 	border-left: 4px solid #F14241;
 	padding-left: 5px;}
 
+.slider_box#mobile_share_box{
+	overflow: visible !important;
+}
 .slider_box#mobile_share_box form{
 	margin: 20px;
 }
@@ -319,10 +310,14 @@ div#header{
 }
 
 .slider_box#mobile_share_box .selectcourse .dropdown{
+	width: 97px !important;
 	}
 
-.slider_box#mobile_share_box .selectcourse .dropdown a{
-
+.slider_box#mobile_share_box .selectcourse .dropdown a.current{
+	width: 97px;
+	}
+.slider_box#mobile_share_box .selectcourse .dropdown ul{	
+	width: 97px !important;
 	}
 
 /* -----------------------------------------
@@ -1716,6 +1711,10 @@ div#info ul li span,div#week-info ul li span{
 	font-weight: bold;
 	}
 	
+	
+div#no_resource_box{
+	width: 25%;
+}
 
 /* -----------------------------------------
    weeks-bar
